[package]
name = "aws-mfa"
version = "0.1.0"
authors = ["Fumihiko Kinoshita <fkinos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"